@@ -5,14 +5,14 @@
 	<h1>{$layout.pagetitle}</h1>
 	<div id="lms-ui-welcome-boxes">
 		<div id="lms-ui-welcome-main-panels">
-			<div class="lms-ui-welcome-main-panel">
+			<div id="lms-ui-welcome-panel-1" class="lms-ui-welcome-main-panel">
 				{block name="welcome-left-panel"}
 					{include file="welcome/welcome_sysinfo_about_lms.html"}
 					{include file="welcome/welcome_sysinfo_customers.html"}
 					{include file="welcome/welcome_sysinfo_rtstats.html"}
 				{/block}
 			</div>
-			<div class="lms-ui-welcome-main-panel">
+			<div id="lms-ui-welcome-panel-2" class="lms-ui-welcome-main-panel">
 				{block name="welcome-right-panel"}
 					{include file="welcome/welcome_sysinfo_about_system.html"}
 					{include file="welcome/welcome_summaries.html"}
@@ -20,6 +20,10 @@
 					{include file="welcome/welcome_registration.html"}
 				{/block}
 			</div>
+			{for $panel=3 to ConfigHelper::getConfig('phpui.welcome_panels', 2)}
+				<div id="lms-ui-welcome-panel-{$panel}" class="lms-ui-welcome-main-panel">
+				</div>
+			{/for}
 		</div>
 		<div id="lms-ui-welcome-extra-panel">
 			{block name="extra-panel"}
@@ -36,6 +40,44 @@
 			{/block}
 		</div>
 	</div>
+	<script>
+
+		function markEmptyPanels() {
+			$('.lms-ui-welcome-main-panel').addClass('empty').each(function() {
+				if ($(this).children('table,div').length) {
+					$(this).removeClass('empty');
+				}
+			});
+		}
+
+		$('.lms-ui-welcome-main-panel').sortable({
+			connectWith: '.lms-ui-welcome-main-panel',
+			items: "> table",
+			handle: "thead tr",
+			placeholder: {
+				element: function(currentItem) {
+					return $('<div class="lms-ui-welcome-box-placeholder"></div>')[0];
+				},
+				update: function(container, p) {
+					return;
+				}
+			},
+			update: function(event, ui) {
+				var panels = {};
+				if (!ui.sender) {
+					$('.lms-ui-welcome-main-panel').each(function() {
+						panels[$(this).attr('id')] = $(this).sortable('toArray').join(';');
+					});
+					savePersistentSettings( { 'welcome-sortable-order': panels } );
+					markEmptyPanels();
+				}
+			}
+		});
+
+		restoreSortable('lms-ui-welcome-main-panels', JSON.parse('{$welcome_sortable_order}'));
+
+		markEmptyPanels();
+	</script>
 	{if $newer_version}
 		<script>
 			alert('{t a=$newer_version b="http://lms.org.pl/download"}There is newer version of LMS ($a) available for download from $b.{/t}');
