@@ -1,5 +1,5 @@
 {if !ConfigHelper::checkPrivilege('hide_links')}
-<table class="lmsbox">
+<table class="lmsbox" id="lms-ui-welcome-box-links">
     <thead>
         <tr onclick="showOrHide('welcome_links-{$layout.module}');">
             <td class="text-center bold">
