@@ -1,5 +1,5 @@
 {if ConfigHelper::checkConfig('privileges.superuser')}
-<table class="lmsbox">
+<table class="lmsbox" id="lms-ui-welcome-box-registration">
     <thead>
         <tr onclick="showOrHide('welcome_registration-{$layout.module}');">
             <td class="text-center bold">
