@@ -1,5 +1,5 @@
 {if !ConfigHelper::checkPrivilege('hide_summaries')}
-<table class="lmsbox">
+<table class="lmsbox" id="lms-ui-welcome-box-summaries">
     <colgroup>
         <col style="width: 50%;">
         <col style="width: 50%;">
