@@ -1,5 +1,5 @@
 {if !ConfigHelper::checkPrivilege('hide_sysinfo')}
-<table class="lmsbox">
+<table class="lmsbox" id="lms-ui-welcome-box-about-system">
     <colgroup>
         <col style="width: 50%;">
         <col style="width: 50%;">
