@@ -1,5 +1,5 @@
 {if $rtstats}
-<table width="100%">
+<table width="100%" id="lms-ui-welcome-box-rtstats">
     {if $rtstats|@count >= 3}
     {assign var="hboxesinrow" value="3"}
     {else}
